# uavAP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deploy.sh  generate_proto.sh  setup.sh  setup_core_only.sh  setup_deploy.sh  setup_deploy_arm.sh  setup_deploy_no_lib.sh
src/: CMakeLists.txt  Doxyfile  format.astylerc  format_eclipse.xml  uavAP.config  uavAP.creator  uavAP.files  uavAP.includes  uavAP.pro
src/API/: AggregatableAutopilotAPI.cpp  AutopilotAPI.cpp  CMakeLists.txt  ChannelMixing.cpp
src/API/Simulation/: Simulation.cpp
src/API/ap_ext/: ApExtManager.cpp  LinearSensorManager.cpp  UTM.cpp  ap_ext.cpp
src/Communication/: CMakeLists.txt  Communication.cpp
src/Core/: CMakeLists.txt  SensorData.cpp
src/Core/DataHandling/: DataHandling.cpp
src/Core/Frames/: BodyFrame.cpp  CMakeLists.txt  InertialFrame.cpp  LocalFrame.cpp  VehicleOneFrame.cpp
src/Core/Orientation/: CMakeLists.txt  ConversionUtils.cpp  ENU.cpp  NED.cpp
src/Core/OverrideHandler/: CMakeLists.txt  OverrideHandler.cpp
src/ExternalPlanner/: CMakeLists.txt  ExtConnector.cpp  main.cpp
src/ExternalPlanner/PythonAPI/: CMakeLists.txt  PythonAPI.cpp  uavAPI.cpp
src/FlightAnalysis/: CMakeLists.txt  FlightAnalysis.cpp
src/FlightAnalysis/Condition/: CMakeLists.txt  DurationCondition.cpp  GeofencingCondition.cpp  RectanguloidCondition.cpp  SensorDataCondition.cpp  SteadyStateCondition.cpp
src/FlightAnalysis/ConditionManager/: ConditionManager.cpp
src/FlightAnalysis/DataHandling/: FlightAnalysisDataHandling.cpp
src/FlightAnalysis/ManeuverAnalysis/: ManeuverAnalysis.cpp
src/FlightAnalysis/ManeuverPlanner/: CMakeLists.txt  Maneuver.cpp  ManeuverPlanner.cpp  ManeuverPlanner_old.cpp  Override.cpp
src/FlightAnalysis/SignalGenerator/: CMakeLists.txt  CustomSignalGenerator.cpp  MultiSineSignalGenerator.cpp  SineSignalGenerator.cpp  SquareSignalGenerator.cpp
src/FlightAnalysis/TrimAnalysis/: CMakeLists.txt
src/FlightAnalysis/WindAnalysis/: CMakeLists.txt  WindAnalysis.cpp
src/FlightControl/: CMakeLists.txt  FlightControl.cpp
src/FlightControl/Controller/: CMakeLists.txt
src/FlightControl/LocalPlanner/: CMakeLists.txt
src/FlightControl/Safety/: CMakeLists.txt  OverrideSafety.cpp
src/FlightControl/SensingActuationIO/: CMakeLists.txt  SensingActuationIO.cpp  SensingIO.cpp
src/FlightControl/SimplexSupervisor/: CMakeLists.txt  FullStateSimplex.cpp  MultiSimplexSupervisor.cpp
src/FlightControl/StateSpaceUtils/: CMakeLists.txt
src/FlightControl/ThrottleLimiter/: CMakeLists.txt  ThrottleLimiter.cpp
src/MissionControl/: CMakeLists.txt  MissionControl.cpp  MissionControlPrint.cpp  Polygon.cpp
src/MissionControl/ConditionManager/: ConditionManager.cpp
src/MissionControl/DataHandling/: MissionControlDataHandling.cpp
src/MissionControl/ExternalPlanner/: CMakeLists.txt  ExternalPlanner.cpp
src/MissionControl/Geofencing/: DirectRollModel.cpp  Geofencing.cpp
src/MissionControl/GlobalPlanner/: CMakeLists.txt  Geometry.cpp
src/MissionControl/LocalFrameManager/: CMakeLists.txt  LocalFrameManager.cpp
src/MissionControl/ManeuverPlanner/: CMakeLists.txt  ManeuverPlanner.cpp  Override.cpp
src/MissionControl/MissionPlanner/: CMakeLists.txt  Mission.cpp
src/MissionControl/WindAnalysis/: WindAnalysis.cpp
src/Simulation/: CMakeLists.txt  FixedWing.cpp
src/Tools/: CMakeLists.txt
src/Tools/ControllerSim/: CMakeLists.txt  ControllerSim.cpp
src/Tools/EmulationInterface/: CMakeLists.txt
src/Tools/JsonPopulation/: CMakeLists.txt  JsonPopulation.cpp
src/Tools/Listener/: CMakeLists.txt  Listener.cpp
src/Tools/LogParsing/: CMakeLists.txt  LogParser.cpp  LogParser.h  LogParserParams.h  LogParsingHelper.h  main.cpp
src/Tools/PacketReader/: CMakeLists.txt  PacketReader.cpp
src/Tools/ServoTool/: CMakeLists.txt
src/Tools/SharedMemoryInit/: CMakeLists.txt  SharedMemoryInit.cpp
src/Watchdog/: CMakeLists.txt  Watchdog.cpp
src/Watchdog/ProcessMonitor/: ProcessInfo.cpp  ProcessMonitor.cpp
src/config/: alvolo.json  avistar.json  communication.json  flight_control.json  mission_control.json  pulsar.json  sailplane.json  simulation.json  watchdog.json
src/config/avistar/: alvolo.json  communication.json  flight_analysis.json  flight_control.json  mission_control.json
src/config/pulsar/: alvolo.json  flight_control.json  mission_control.json
src/config/sailplane/: alvolo.json  flight_analysis.json  flight_control.json  mission_control.json
src/src/: CMakeLists.txt
src/src/API/: AutopilotAPI.cpp  CMakeLists.txt  ChannelMixing.cpp
src/src/Communication/: CMakeLists.txt  Communication.cpp
src/src/Core/: CMakeLists.txt  LinearAlgebra.cpp  LinearAlgebraProto.cpp  SensorData.cpp
src/src/FlightAnalysis/: CMakeLists.txt  FlightAnalysis.cpp
src/src/FlightControl/: CMakeLists.txt  FlightControl.cpp
src/src/MissionControl/: CMakeLists.txt  MissionControl.cpp  MissionControlPrint.cpp  Polygon.cpp
src/test/: CMakeLists.txt  TestRunner.cpp
test/: CMakeLists.txt  Test.cpp  TestMan.cpp  TestRunner.cpp
test/API/: ApExtTest.cpp  CMakeLists.txt  LinearSensorManagerTest.cpp
test/Core/: APLoggerTest.cpp  AngleTest.cpp  CMakeLists.txt  ConfigurableObjectTest.cpp  ConversionUtilsTest.cpp  DataHandlingTest.cpp  DataPresentationTest.cpp  EnumAccess.cpp  FramedVector3Test.cpp  FramesTest.cpp  FrameworkAPITest.cpp  JsonPopulatorTest.cpp  LocalFrameTest.cpp  ObjectHandleTest.cpp  OrientationTest.cpp  PropertyMapperTest.cpp  RectanguloidTest.cpp  SchedulerTest.cpp
test/FlightAnalysis/: OverrideTest.cpp
test/FullAutopilot/: Autopilot.cpp  AutopilotHelper.h  CMakeLists.txt
test/Geofencing/: CMakeLists.txt  GeneralTests.cpp
test/Math/: CMakeLists.txt
test/Plugin/: TestControllerPlugin.h  test_config.json
tests/: CMakeLists.txt
tests/API/: CMakeLists.txt
tests/Core/: ApproachTest.cpp  CMakeLists.txt  DataHandlingTest.cpp  EnumAccess.cpp
tests/FlightAnalysis/: CMakeLists.txt  OverrideTest.cpp
tests/FlightControl/: CMakeLists.txt  json.cpp
tests/FullAutopilot/: CMakeLists.txt  autopilot.json
tests/MissionControl/: Approach.cpp  CMakeLists.txt  Geometry.cpp
(+860 files in other folders)
